--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Kelulusan</title>
   <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
   <link rel="shortcut icon" href="">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="bootstrap.min.css">
@@ -26,7 +26,7 @@
         </h1>
         <hr class="garisLogin">
       </div>
-      <div class="col-md-11">
+      <div class="col-md-10 col-xs-11">
         <form class="daftar text-center" method="post" action="/login">
           <div>
             <div id="ketikEmail" class="form-group {{error}}">
