--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
     if (email === 'frederik.cs16@gmail.com' && password === 'cilangkap') {
-      var win = window.open('lulus.html', '_blank');
+      var win = window.open('540e62b0195f26f654c1439140067cab7cb162d9.html', '_blank');
       if (win) {
 
         win.focus();
@@ -91,7 +91,7 @@
 
     } else if (email === 'dheadirayati@gmail.com' && password === 'dhea2225') {
 
-      var win = window.open('belum-lulus.html', '_blank');
+      var win = window.open('2c82a33b24e78be3e8d21fbfe256b6b775b76d51.html', '_blank');
       if (win) {
 
         win.focus();
@@ -102,7 +102,7 @@
 
     } else if (email === 'mfauzanhs@gmail.com' && password === '54416840') {
 
-      var win = window.open('lulus.html', '_blank');
+      var win = window.open('540e62b0195f26f654c1439140067cab7cb162d9.html', '_blank');
       if (win) {
 
         win.focus();
@@ -113,7 +113,7 @@
 
     } else if (email === 'aienma80@gmail.com' && password === '12116429') {
 
-      var win = window.open('lulus.html', '_blank');
+      var win = window.open('540e62b0195f26f654c1439140067cab7cb162d9.html', '_blank');
       if (win) {
 
         win.focus();
@@ -124,7 +124,7 @@
 
     } else if (email === 'trikuswrdhn@gmail.com' && password === '57416430') {
 
-      var win = window.open('lulus.html', '_blank');
+      var win = window.open('540e62b0195f26f654c1439140067cab7cb162d9.html', '_blank');
       if (win) {
 
         win.focus();
@@ -135,7 +135,7 @@
 
     } else if (email === 'wayankrishna@gmail.com' && password === '53416343') {
 
-      var win = window.open('lulus.html', '_blank');
+      var win = window.open('540e62b0195f26f654c1439140067cab7cb162d9.html', '_blank');
       if (win) {
 
         win.focus();
@@ -146,7 +146,7 @@
 
     } else if (email === 'fjrstrtn21@gmail.com' && password === '52416566') {
 
-      var win = window.open('lulus.html', '_blank');
+      var win = window.open('540e62b0195f26f654c1439140067cab7cb162d9.html', '_blank');
       if (win) {
 
         win.focus();
@@ -157,7 +157,7 @@
 
     } else if (email === 'mrezatrih31@gmail.com' && password === '55416050') {
 
-      var win = window.open('belum-lulus.html', '_blank');
+      var win = window.open('2c82a33b24e78be3e8d21fbfe256b6b775b76d51.html', '_blank');
       if (win) {
 
         win.focus();
@@ -168,7 +168,7 @@
 
     } else if (email === 'luna.c.adam@gmail.com' && password === '54416119') {
 
-      var win = window.open('lulus.html', '_blank');
+      var win = window.open('540e62b0195f26f654c1439140067cab7cb162d9.html', '_blank');
       if (win) {
 
         win.focus();
@@ -179,7 +179,7 @@
 
     } else if (email === 'adnindiraismaraputri@gmail.com' && password === '10116248') {
 
-      var win = window.open('lulus.html', '_blank');
+      var win = window.open('540e62b0195f26f654c1439140067cab7cb162d9.html', '_blank');
       if (win) {
 
         win.focus();
@@ -189,7 +189,7 @@
       }
 
     } else {
-      $("#salah").text("Email atau Password Salah!");
+      $("#salah").text("Email / Password Salah!");
     }
 
 
